--- a/gb/news2008_2.md
+++ b/gb/news2008_2.md
@@ -1,4 +1,9 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/lduuv275/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/lduuv275/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/lduuv275/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>生活消费</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/lduuv275/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/lduuv275/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/lduuv275/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/lduuv275/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/31/n11757487.md#1" target="_blank">作弄女儿！爸爸送“最糟圣诞礼”女儿反应超意外</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/31/n11757487.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1f2cfd56e8e91216f2493070b3fbd8a4-150x120.jpg" align ="left"></a>一个年轻的父亲想作弄小女儿，看看如果他给出“最糟糕的圣诞节礼物”时，女儿的反应如何？ 但令父亲惊讶的是，这位2岁小女孩以一种非同寻常的方式回应。小女孩同时也逗乐了很多网友，致使视频在Twitter上风靡一时。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:54 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/31/n11757576.md#1" target="_blank">她95次交换礼物中大奖 秘密圣诞老人是比尔?盖茨</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/31/n11757576.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/children-girls-family-gifts-150x120.jpg" align ="left"></a>一位33岁的美国妇女当她参加第95次参加耶诞节交换礼物时中大奖，17日，她终于得到比尔?盖茨（Bill Gates）成为她的“秘密圣诞老人”（Secret Santa），他寄给谢尔比重达81磅的书籍、零食和书呆子纪念品。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:37 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/30/n11754898.md#1" target="_blank">帮新生宝宝戴“尤达帽”萌照热传 宠物帽也很可爱</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/30/n11754898.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/a3c28e08fbb465e964d5a8bafa2c5f18-150x120.jpg" align ="left"></a>匹兹堡的一家医院正在为他们制作的可爱手工制作的Baby Yoda帽子成为头条新闻，他们在这个假日季节为新生婴儿打扮。一系列照片在网路上流传。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 1:48 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/30/n11754829.md#1" target="_blank">2年不见 儿扮“圣诞老人”现身 警察爸抱紧处理</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/30/n11754829.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/4a2a1fc1e6e08204121a32b094ce136b-150x120.jpg" align ="left"></a>为了想给在德州丹顿县当警察的父亲查德?柯克（Chad Kirk）一个惊喜，克里斯决定比预期提早4个月回家过圣诞节。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 1:36 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11767033.md#1" target="_blank">新手也养得活 10种容易照顾的室内植物</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11767033.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e692420823ee47_ttl7day4Ns_shutterstock_791834743-150x120.jpg" align ="left"></a>对忙碌的现代人而言，生活有时相当紧凑，一不小心就忘了该浇多少水，该施多少肥。如果要出外旅行，更需要担心它们有没有人能照料？其实，有些植物本来就生长在艰困的环境之中，面对大自然的考验时，旺盛的生命力让它们坚韧的繁衍了千万年。如果你总是难把植栽照料好，或许这些养不死的室内植物，就是最适合你的“绿色宠物”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 1:10 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11767066.md#1" target="_blank">车评：起亚之魂 2020 Kia Soul GT-Line</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11767066.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2020_Kia_Soul_GT_01-150x120.jpg" align ="left"></a>Kia的新一代Soul，早在2018年洛杉矶车展上已展出，而笔者在2019年温哥华车展上也碰到了，但真正可以将它在开在路上，这周是首次有这个机会。
 
 
@@ -30,12 +35,9 @@
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/2/n11761626.md#1" target="_blank">家里装修期间如何“战地求生”？</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/2/n11761626.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/wall-416060_1280-150x120.jpg" align ="left"></a>家里装修浴室和厨房期间对谁来说都是很头疼的时期，有的人考虑搬出去住，但是这工作量大开支也大。如果实在要住在家里，看看地产资讯网Domain搜集的几点经验，帮您顺利度过这种“兵荒马乱”的日子。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 10:04 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/2/n11761601.md#1" target="_blank">浴室装修专家给您七大提点</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/2/n11761601.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/home-3593729_1280-150x120.jpg" align ="left"></a>翻新浴室的时候，看着各式各样的新潮花样是不是会挑花了眼，到底哪些是必须的，哪些是奢侈不必要的呢？房地产资讯网Domain收集了多位专家的意见，为读者提供了七个建议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 9:51 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/2/n11761588.md#1" target="_blank">家居格局规划应避免的五大错误</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/2/n11761588.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/living-room-1085987_1280-150x120.jpg" align ="left"></a>设计新家的时候，如何最有效地规划空间的分割？地产资讯网Domain列出了人们常犯的五个错误。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 9:39 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/2/n11761518.md#1" target="_blank">与全球相比 加拿大房市前景乐观</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/2/n11761518.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_702565756-150x120.jpg" align ="left"></a>加拿大房市与全球房市息息相关，如果脱离全球视野，则好比雾里看花。Knight Frank全球房价指数显示，全球56个主要国家房市放缓行情榜上，加拿大排第49名，基本垫底。去年2季度加拿大房价同比微涨0.5%，涨幅虽微，但从以下几方面看，前景仍乐观。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 8:38 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/1/n11760891.md#1" target="_blank">2019年加国房市异常坚韧 今年或成卖方市场</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/1/n11760891.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_546856336-150x120.jpg" align ="left"></a>过去1年中加国房市虽有起伏，但总体来说，房价与销量均有强劲回升。目前虽只差12月份数据，但根据截至11月底的数据，已足以反映去年全年情况和展望今年市场前景。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 11:56 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/1/n11759883.md#1" target="_blank">短暂改变饮食 可缓解忧郁症状</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/1/n11759883.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2a3a6a8e62596104f1e9ba0c8085381f-150x120.jpg" align ="left"></a>进入2020年，新的一年之始，加上寒冷的天气，朋友相约吃热呼呼的火锅、公司尾牙聚餐、大小聚餐不断？千万别仗势年轻而“百无禁忌”的吃！吃对食物，才不会越吃越忧郁。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 4:34 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/1/n11759629.md#1" target="_blank">德男超写实3D绘画 会让你产生视错觉</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/1/n11759629.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Fotolia_50993506_Subscription_L-2-150x120.jpg" align ="left"></a>帕布斯特（Stefan Pabst）是在俄罗斯出生、目前住在德国的艺术家。他擅长画超写实的3D图画，其逼真程度会让人们以为自己的眼睛产生错觉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 2:50 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/30/n11754822.md#1" target="_blank">外出前是否应拔掉插头？居家电器安全须知</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/30/n11754822.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20191231_shouhui_shutterstock_1096242290_cord_02-150x120.jpg" align ="left"></a>有些人出门前有拔掉家里插头的习惯，觉得不拔插头会很危险；但也有人认为没有必要拔插头。到底出门前应不应该拔插头呢？平常家里的电器用品需要经常拔插插头吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 2:03 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/1/n11759374.md#1" target="_blank">为什么龙虾在煮食后会变红色？</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/1/n11759374.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Fotolia_61696157_Subscription_L-150x120.jpg" align ="left"></a>龙虾的肉质鲜甜有弹性，是许多饕客的最爱。但人们在餐桌上见到的鲜红色龙虾，原本生活在海底时却是蓝绿色的。为什么这种甲壳类动物在煮食之后会变色呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 1:42 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11767534.md#1" target="_blank">汽车维修问与答：引擎漏油的原因</a><br></h3>汽车维修问与答
+
+读者James问：李师傅您好！我有一辆98年的本田雅阁两门跑车，已有20多年历史，但行驶平稳，从未有大毛病，不舍得放弃。近几个月发现引擎油缓慢漏出，外壳被油包裹，两次送去普通车行清洗引擎外壳后，都未发现任何问题。到本田经销商检查后说，可能需更换Oil Pump Seal和Distributor，需.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 4:14 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/2/n11762251.md#1" target="_blank">民调：2019卑首次购房者多依赖父母</a><br></h3>本周一公布的这项调查显示，现在的首次购房者比以往任何时候都更有可能向父母要求首付现金，虽然只有8％的首次购房者从父母那里获得了一半以上的首付，而2015年这一比例为19％。
 报告指出：“尽管有更多的首次购房者获得了经济上的帮助，但他们似乎在过去四年中所获得的首付比例较低。”59％的公证人说，他们的客户通常可（从父母那.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 7:48 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/lduuv275/djy/blob/master/gb/news2008_3.md#1">下一页</a></h3></td></tr>
